daniel_masero/session01/exercise-01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: mariadb
   namespace: exercise-01
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
          - name: mariadb-server
            containerPort: 3306
        volumeMounts:
          - mountPath: /bitnami
            name: volumesdb
      volumes:
        - name: volumesdb
          hostPath:
            path: /tmp/data/
            type: Directory
