daniel_masero/session01/exercise-01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: wordpress
   namespace: exercise-01
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        ports:
          - name: http-server
            containerPort: 80
        volumeMounts:
          - mountPath: /bitnami
            name: volumesdb
      volumes:
        - name: volumesdb
          hostPath:
            path: /tmp/data/
            type: Directory
