daniel_masero/session01/exercise-01/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: mariadb
   namespace: exercise-01
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: mariadb-server
  selector:
    app: mariadb
    tier: backend
  sessionAffinity: ClientIP
