daniel_masero/session01/exercise-01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: wordpress
   namespace: exercise-01
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-server
  selector:
    app: wordpress
    tier: frontend
